[package]
name = "wallet_balance_gui"
version = "0.1.0"
authors = ["Fedor Tkachenko"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde =  { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
ureq = { version = "2.9.6", features = ["json"] }
thiserror = "1.0.58"
serde_json = "1.0.115"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

